added react extension

--- a/apps/extension/index.html
+++ b/apps/extension/index.html
@@ -70,9 +70,7 @@
           class="w-full min-h-fit h-28 bg-slate-200 p-2 rounded-md"
         ></textarea>
         <span class="text-slate-600 text-xs font-bold"
-          >This is only a Prefix to the Prompt, the tweet will be automatically
-          added at the end when you click the icon on the bottom-right on every
-          tweet!</span
+          >The tweet will be added at the end of this prompt</span
         >
 
         <button
